Modified yml file to get rid of SQLDIALECTERROR error

--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -3,6 +3,7 @@ server:
   
 spring:
   datasource:
+    name: microservices_hotel_rating
     url: jdbc:mysql://localhost:3306/microservices_hotel_rating
     username: root
     password: Arpit
@@ -14,4 +15,4 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
