added another controller in hotel-service for testing multiple end points through API gateway

--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
         uri:
             lb://HOTEL-SERVICE
         predicates:
-        - Path=/hotels/**
+        - Path=/hotels/**, /staffs/**
       
       - id: 
            RATING-SERVICE
