--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -18,12 +18,12 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
   application:
     name: USER-SERVICE       
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
     
