--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -18,12 +18,15 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect
   application:
     name: HOTEL-SERVICE
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+  config:
+    import: optional:configserver:http://localhost:8085
+  
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
     
