added RateLimiter and its configuration

--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -63,5 +63,12 @@ resilience4j:
       ratingHotelService:
         max-attempts: 3
         wait-duration: 3s
+  
+  ratelimiter:
+    instances:
+      userRateLimiter:
+        limit-refresh-period: 4s
+        limit-for-period: 1
+        timeout-duration: 0s
    
     
